<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.red5pro</groupId>
    <artifactId>red5pro-ice</artifactId>
    <!-- When the version changes, update Agent.VERSION as well -->
    <version>1.2.16</version>
    <packaging>jar</packaging>
    <name>red5pro-ice</name>
    <url>https://github.com/red5pro/red5pro-ice</url>
    <developers>
        <developer>
            <id>Paul Gregoire</id>
            <email>paul@red5pro.com</email>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/red5pro/red5pro-ice</url>
        <connection>scm:git:https://github.com/red5pro/red5pro-ice.git</connection>
        <developerConnection>scm:git:https://github.com/red5pro/red5pro-ice.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- reduces a confusing message about the future availability of displayed plugins -->
        <maven.plugin.validation>brief</maven.plugin.validation>
        <!-- allows tests to be built and works in conjuction with skipTests property -->
        <maven.test.skip>false</maven.test.skip>
        <!-- prevents built tests from running -->
        <skipTests>true</skipTests>
        <maven.compiler.verbose>false</maven.compiler.verbose>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.build.timestamp.format>MM.dd.yyyy HH:mm</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>
        <mina.version>2.0.27</mina.version>
        <jmdns.version>3.5.8</jmdns.version>
        <logback.version>1.5.18</logback.version>
        <junit.version>[4.13.1,)</junit.version>
    </properties>
    <!-- private location for red5pro deploy -->
    <distributionManagement>
        <repository>
            <id>red5pro-ext-release</id>
            <name>red5pro-releases</name>
            <url>https://red5pro.jfrog.io/red5pro/ext-release-local</url>
        </repository>
        <snapshotRepository>
            <id>red5pro-ext-snapshot</id>
            <name>red5pro-snapshots</name>
            <url>https://red5pro.jfrog.io/red5pro/ext-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.mina</groupId>
                <artifactId>mina-parent</artifactId>
                <version>${mina.version}</version>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.mina</groupId>
            <artifactId>mina-core</artifactId>
            <version>${mina.version}</version>
            <type>bundle</type>
        </dependency>
        <!--
        <dependency>
            <groupId>org.jmdns</groupId>
            <artifactId>jmdns</artifactId>
            <version>3.5.8</version>
        </dependency>
        -->
        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>clean install</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.7.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <verbose>false</verbose>
                    <failOnError>false</failOnError>
                    <sourcepath>${basedir}/src/main/java</sourcepath>
                    <includeDependencySources>false</includeDependencySources>
                    <dependencySourceIncludes>
                        <dependencySourceInclude>com.red5pro:*</dependencySourceInclude>
                    </dependencySourceIncludes>
                    <detectOfflineLinks>false</detectOfflineLinks>
                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
            <!-- Project http://code.revelc.net/formatter-maven-plugin/ -->
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.23.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>Red5Pro-formatter.xml</configFile>
                    <!-- Enforce line-feed (linux,mac) line endings att -->
                    <lineEnding>LF</lineEnding>
                    <!-- Exclude xml and props files -->
                    <excludes>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/*.html</exclude>
                        <exclude>**/*.properties</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <skipTests>${skipTests}</skipTests>
                    <includes>
                        <include>**/*TestSuite.*</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.1</version>
                <extensions>true</extensions>
            </plugin>
        </plugins>
    </build>
</project>
